--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+@use './theme/theme.scss' as theme;
+
+html,
+body {
+  height: 100%;
+  @include theme.theme;
+}
+
+body {
+  margin: 0;
+}
