--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-
 @use './theme/theme.scss' as theme;
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html,
 body {
