feat(home): hero section

--- a/libs/client/feature-shell/src/lib/app-shell.component.html
+++ b/libs/client/feature-shell/src/lib/app-shell.component.html
@@ -12,7 +12,7 @@
       }
 
       <li class="ml-8">
-        <a matIconButton [routerLink]="'/cart'">
+        <a mat-icon-button [routerLink]="'/cart'">
           <mat-icon color="primary">shopping_cart</mat-icon>
         </a>
       </li>
