feat: product card

--- a/libs/client/feature-home-page/src/lib/home-page.component.html
+++ b/libs/client/feature-home-page/src/lib/home-page.component.html
@@ -43,3 +43,5 @@
 
   <!-- https://unsplash.com/photos/black-cordless-headphones-beside-closed-black-laptop-computer-and-smartphone-_aXa21cf7rY -->
 </section>
+
+<ssrmart-product-card [product]="productMock" />
