feat: bestsellers section

--- a/libs/client/feature-home-page/src/lib/home-page.component.html
+++ b/libs/client/feature-home-page/src/lib/home-page.component.html
@@ -15,7 +15,7 @@
 
 <!-- Promo Section -->
 <section
-  class="flex flex-col lg:flex-row justify-between items-center gap-8 py-8 px-16"
+  class="flex flex-col lg:flex-row justify-between items-center gap-8 py-8 max-w-[--section-max-w] mx-auto"
 >
   <div class="flex-1 flex flex-col gap-4 max-w-prose">
     <h2>Premium Quality, Unbeatable Pricices</h2>
@@ -31,6 +31,13 @@
       equipment - we've got everything you need to stay connected and productive
       in today's digital world.
     </p>
+
+    <a
+      matButton="filled"
+      class="mat-accent-button self-start"
+      routerLink="/products"
+      >Explore Deals</a
+    >
   </div>
 
   <img
@@ -44,4 +51,25 @@
   <!-- https://unsplash.com/photos/black-cordless-headphones-beside-closed-black-laptop-computer-and-smartphone-_aXa21cf7rY -->
 </section>
 
-<ssrmart-product-card [product]="productMock" />
+<section class="py-8 px-16 flex flex-col gap-8">
+  <div class="text-center">
+    <h2>Bestsellers</h2>
+    <p>Our most popular products that customers can't get enough of</p>
+  </div>
+
+  <div
+    class="grid grid-cols-3 gap-12 justify-items-center max-w-[--section-max-w] mx-auto"
+  >
+    @for (product of bestsellers; track product.id) {
+    <ssrmart-product-card [product]="product" />
+    }
+  </div>
+
+  <a
+    matButton="filled"
+    class="mat-accent-button self-center"
+    routerLink="/products"
+    [queryParams]="{ bestsellers: true }"
+    >View All Bestsellers</a
+  >
+</section>
