--- a/libs/client/feature-home-page/src/lib/home-page.component.html
+++ b/libs/client/feature-home-page/src/lib/home-page.component.html
@@ -58,10 +58,12 @@
   </div>
 
   <div
-    class="grid grid-cols-3 gap-12 justify-items-center max-w-[--section-max-w] mx-auto"
+    class="grid grid-cols-3 gap-12 justify-items-center items-stretch max-w-[--section-max-w] mx-auto"
   >
-    @for (product of bestsellers; track product.id) {
-    <ssrmart-product-card [product]="product" />
+    @for (product of bestsellersResource.value(); track product.id) {
+    <a [routerLink]="['/products', product.id]">
+      <ssrmart-product-card [product]="product" class="h-full" />
+    </a>
     }
   </div>
 
