--- a/libs/client/ui-product-card/src/lib/product-card.component.html
+++ b/libs/client/ui-product-card/src/lib/product-card.component.html
@@ -1,34 +1,29 @@
-<a
-  [routerLink]="['/products', product().id]"
-  class="block no-underline cursor-pointer"
->
-  <mat-card>
-    <img
-      mat-card-image
-      [ngSrc]="product().imageUrl"
-      [alt]="product().name"
-      width="400"
-      height="267"
-      priority
-    />
+<mat-card class="h-full">
+  <img
+    mat-card-image
+    [ngSrc]="product().imageUrl"
+    [alt]="product().name"
+    width="400"
+    height="267"
+    priority
+  />
 
-    <mat-card-header>
-      <mat-card-title>{{ product().name }}</mat-card-title>
-      <mat-card-subtitle>{{ product().shortDescription }}</mat-card-subtitle>
-    </mat-card-header>
+  <mat-card-header class="flex-1">
+    <mat-card-title>{{ product().name }}</mat-card-title>
+    <mat-card-subtitle>{{ product().shortDescription }}</mat-card-subtitle>
+  </mat-card-header>
 
-    <mat-card-content class="mt-4 !flex justify-between items-center">
-      <strong
-        class="text-[--mat-sys-tertiary] font-bold text-2xl"
-        aria-label="Price"
-      >
-        {{ product().price | currency }}
-      </strong>
+  <mat-card-content class="mt-4 !flex justify-between items-center">
+    <strong
+      class="text-[--mat-sys-tertiary] font-bold text-2xl"
+      aria-label="Price"
+    >
+      {{ product().price | currency }}
+    </strong>
 
-      <div class="flex items-center gap-1">
-        <span aria-label="Rating">{{ product().rating }}</span>
-        <mat-icon class="text-yellow-500" aria-hidden="true">star</mat-icon>
-      </div>
-    </mat-card-content>
-  </mat-card>
-</a>
+    <div class="flex items-center gap-1">
+      <span aria-label="Rating">{{ product().rating }}</span>
+      <mat-icon class="text-yellow-500" aria-hidden="true">star</mat-icon>
+    </div>
+  </mat-card-content>
+</mat-card>
