feat: product details page

--- a/libs/client/products/ui-product-card/src/lib/product-card.component.html
+++ b/libs/client/products/ui-product-card/src/lib/product-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="h-full">
   <img
     mat-card-image
-    [ngSrc]="product().imageUrl"
+    [ngSrc]="product().imageUrl | ssrmartImageSize: 'card'"
     [alt]="product().name"
     width="400"
     height="267"
