--- a/libs/client/feature-home-page/src/lib/home-page.component.html
+++ b/libs/client/feature-home-page/src/lib/home-page.component.html
@@ -11,7 +11,7 @@
 
 <!-- Promo Section -->
 <section
-  class="flex flex-col lg:flex-row justify-between items-center gap-8 py-8 max-w-[--section-max-w] mx-auto"
+  class="flex flex-col lg:flex-row justify-between items-center gap-8 py-8 max-w-[--section-max-w] mx-auto px-4 xl:px-0"
 >
   <div class="flex-1 flex flex-col gap-4 max-w-prose">
     <h2>Premium Quality, Unbeatable Pricices</h2>
@@ -54,7 +54,7 @@
   </div>
 
   <div
-    class="grid grid-cols-3 gap-12 justify-items-center items-stretch max-w-[--section-max-w] mx-auto"
+    class="grid grid-cols-1 lg:grid-cols-3 gap-8 xl:gap-12 justify-items-center items-stretch max-w-[--section-max-w] mx-auto"
   >
     @for (product of bestsellersResource.value(); track product.id) {
     <a [routerLink]="['/products', product.id]">
