feat: map on about page

--- a/libs/client/feature-about-page/src/lib/about-page.component.html
+++ b/libs/client/feature-about-page/src/lib/about-page.component.html
@@ -25,10 +25,9 @@
 </section>
 
 <section class="grid md:grid-cols-1 lg:grid-cols-3 gap-8">
-  <!-- Feature Card 1 -->
   <div class="group bg-gray-50 rounded-2xl p-8 text-center">
     <div
-      class="w-16 h-16 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-2xl mx-auto mb-6 flex items-center justify-center group-hover:scale-110 transition-transform duration-300"
+      class="w-16 h-16 bg-[--mat-sys-primary] rounded-2xl mx-auto mb-6 flex items-center justify-center"
     >
       <span class="text-2xl text-white">🚀</span>
     </div>
@@ -39,10 +38,9 @@
     </p>
   </div>
 
-  <!-- Feature Card 2 -->
   <div class="group bg-gray-50 rounded-2xl p-8 text-center">
     <div
-      class="w-16 h-16 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-2xl mx-auto mb-6 flex items-center justify-center group-hover:scale-110 transition-transform duration-300"
+      class="w-16 h-16 bg-[--mat-sys-primary] rounded-2xl mx-auto mb-6 flex items-center justify-center"
     >
       <span class="text-2xl text-white">🛡️</span>
     </div>
@@ -53,10 +51,9 @@
     </p>
   </div>
 
-  <!-- Feature Card 3 -->
   <div class="group bg-gray-50 rounded-2xl p-8 text-center">
     <div
-      class="w-16 h-16 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-2xl mx-auto mb-6 flex items-center justify-center group-hover:scale-110 transition-transform duration-300"
+      class="w-16 h-16 bg-[--mat-sys-primary] rounded-2xl mx-auto mb-6 flex items-center justify-center"
     >
       <span class="text-2xl text-white">📱</span>
     </div>
@@ -110,3 +107,5 @@
     </mat-card-content>
   </mat-card>
 </section>
+
+<div id="map" style="width: 600px; height: 300px" class="mx-auto"></div>
