--- a/libs/client/products/ui-product-card/src/lib/product-card.component.html
+++ b/libs/client/products/ui-product-card/src/lib/product-card.component.html
@@ -5,7 +5,7 @@
     [alt]="product().name"
     width="400"
     height="267"
-    priority
+    [priority]="imageLoadPriority()"
   />
 
   <mat-card-header class="flex-1">
