--- a/libs/client/feature-about-page/src/lib/about-page.component.html
+++ b/libs/client/feature-about-page/src/lib/about-page.component.html
@@ -1,3 +1,4 @@
+@defer(hydrate never) {
 <section>
   <h1>About SSRmart</h1>
 
@@ -109,3 +110,4 @@
 </section>
 
 <div id="map" style="width: 600px; height: 300px" class="mx-auto"></div>
+}
