--- a/libs/client/products/feature-product-details-page/src/lib/product-details-page.component.html
+++ b/libs/client/products/feature-product-details-page/src/lib/product-details-page.component.html
@@ -3,12 +3,12 @@
   @if (breadcrumb(); as breadcrumb) {
   <ssrmart-breadcrumb [breadcrumb]="breadcrumb" />
   }
-  
+
   <div class="flex flex-col lg:flex-row gap-8">
     <div class="flex-1 min-w-0">
       <img
-        [ngSrc]="product.imageUrl | ssrmartImageSize : 'hero'"
-        [alt]="product.name"
+        [ngSrc]="product.image.url | ssrmartImageSize : 'hero'"
+        [alt]="product.image.alt"
         width="640"
         height="426"
         priority
