--- a/libs/client/feature-home-page/src/lib/home-page.component.html
+++ b/libs/client/feature-home-page/src/lib/home-page.component.html
@@ -11,7 +11,7 @@
 
 <!-- Promo Section -->
 <section
-  class="flex flex-col lg:flex-row justify-between items-center gap-8 py-8 max-w-[--section-max-w] mx-auto px-4 xl:px-0"
+  class="flex flex-col xl:flex-row justify-between items-center gap-8 py-8 max-w-[--section-max-w] mx-auto px-4"
 >
   <div class="flex-1 flex flex-col gap-4 max-w-prose">
     <h2>Premium Quality, Unbeatable Pricices</h2>
