fix: about page icons

--- a/libs/client/feature-about-page/src/lib/about-page.component.html
+++ b/libs/client/feature-about-page/src/lib/about-page.component.html
@@ -74,12 +74,12 @@
 
     <mat-card-content>
       <div class="flex items-center gap-2 mb-2">
-        <span>📞</span>
+        <fa-icon [icon]="faPhone" />
         <a href="tel:+1234567890">+1 (234) 567-890</a>
       </div>
 
       <div class="flex items-center gap-2">
-        <span>📧</span>
+        <fa-icon [icon]="faEnvelope" />
         <a href="mailto:support@ssrmart.com">support&#64;ssrmart.com</a>
       </div>
     </mat-card-content>
@@ -92,17 +92,17 @@
 
     <mat-card-content>
       <div class="flex items-center gap-2 mb-2">
-        <span>📘</span>
+        <fa-icon [icon]="faFacebook" />
         <a href="https://www.facebook.com/ssrmart">Facebook</a>
       </div>
 
       <div class="flex items-center gap-2 mb-2">
-        <span>🐦</span>
-        <a href="https://www.twitter.com/ssrmart">Twitter</a>
+        <fa-icon [icon]="faTwitter" />
+        <a href="https://www.twitter.com/ssrmart">X (Twitter)</a>
       </div>
 
       <div class="flex items-center gap-2">
-        <span>📷</span>
+        <fa-icon [icon]="faInstagram" />
         <a href="https://www.instagram.com/ssrmart">Instagram</a>
       </div>
     </mat-card-content>
