fix: blog page banner

--- a/libs/client/feature-home-page/src/lib/home-page.component.html
+++ b/libs/client/feature-home-page/src/lib/home-page.component.html
@@ -1,6 +1,6 @@
 <!-- Hero Section -->
 <section
-  class="flex flex-col items-center gap-6 p-16 text-[--mat-sys-on-primary] text-center hero-section"
+  class="flex flex-col items-center gap-6 p-16 text-[--mat-sys-on-primary] text-center bg-gradient-to-tr from-[--mat-sys-primary] to-[--mat-sys-tertiary]"
 >
   <h1>Smart Electronics for Modern Living</h1>
 
