--- a/libs/client/feature-blogs-landing-page/src/lib/blogs-landing-page/blogs-landing-page.component.html
+++ b/libs/client/feature-blogs-landing-page/src/lib/blogs-landing-page/blogs-landing-page.component.html
@@ -1,10 +1,12 @@
-<div class="bg-gradient-to-r from-blue-600 to-purple-600 text-white py-16 px-4">
+<div
+  class="bg-gradient-to-tr from-[--mat-sys-primary] to-[--mat-sys-tertiary] text-white py-16 px-4"
+>
   <div class="max-w-4xl mx-auto text-center flex flex-col items-center">
-    <h1 class="text-4xl md:text-6xl font-bold mb-6">SSR Mart Blog</h1>
-    <p class="text-xl md:text-2xl mb-8 text-gray-200">
+    <h1>SSRmart Blog</h1>
+    <p class="mat-title-large">
       Discover the latest tech products, reviews, and industry insights
     </p>
-    <p class="text-lg text-gray-200 max-w-2xl">
+    <p class="mat-title-medium">
       From cutting-edge electronics to innovative gadgets, our blog keeps you
       informed about the best tech products and trends in the market.
     </p>
