fix: header shadow

--- a/libs/client/products/feature-product-search-page/src/lib/product-search-page.component.html
+++ b/libs/client/products/feature-product-search-page/src/lib/product-search-page.component.html
@@ -1,5 +1,5 @@
 <div
-  class="rounded-lg border border-gray-200 p-4 shadow-[--mat-sys-level2] flex-auto sticky top-0 self-start flex flex-col gap-4"
+  class="rounded-lg border border-gray-200 p-4 shadow-sm flex-auto sticky top-0 self-start flex flex-col gap-4"
 >
   <ssrmart-product-search-categories class="" />
   <ssrmart-product-search-bestsellers-control
