fix: remove empty classes

--- a/libs/client/products/feature-product-search-page/src/lib/product-search-page.component.html
+++ b/libs/client/products/feature-product-search-page/src/lib/product-search-page.component.html
@@ -1,14 +1,13 @@
 <div
   class="rounded-lg border border-gray-200 p-4 shadow-sm flex-auto sticky top-0 self-start flex flex-col gap-4"
 >
-  <ssrmart-product-search-categories class="" />
+  <ssrmart-product-search-categories />
   <ssrmart-product-search-bestsellers-control
     [(bestsellers)]="isBestSeller"
-    class=""
   />
-  <ssrmart-product-search-price-range [(priceRange)]="priceRange" class="" />
-  <ssrmart-product-search-term [(term)]="term" class="" />
-  <ssrmart-product-search-sorting [(sorting)]="sort" class="" />
+  <ssrmart-product-search-price-range [(priceRange)]="priceRange" />
+  <ssrmart-product-search-term [(term)]="term" />
+  <ssrmart-product-search-sorting [(sorting)]="sort" />
 </div>
 
 <div class="flex-auto flex flex-col gap-4">
