feat: cart data access

--- a/libs/client/products/feature-product-details-page/src/lib/product-details-page.component.html
+++ b/libs/client/products/feature-product-details-page/src/lib/product-details-page.component.html
@@ -26,7 +26,7 @@
         >
           {{ product.price | currency }}
         </strong>
-        <button matButton="filled">Add to Cart</button>
+        <button matButton="filled" (click)="addToCart(product.id)">Add to Cart</button>
       </div>
     </div>
   </div>
